--- a/Brugge.mw
+++ b/Brugge.mw
@@ -248,7 +248,7 @@ Ook den [[Thalys]] van [[Parys]] over Brussel toet in Ostende stopt in Brugge.
 
 ==Voetbol==
 [[Image:Janbreydelstadion.jpg|left|thumb|180px|Jan Breydelstadion]]
-Brugge èt twi voetbolploegen in êeste klasse: [[Club Brugge]] (kluup) en [[Cercle Brugge]] (sirkul). Ze spêeln olletwêe in 't [[Jan Breydelstadium|Jan Breydelstadiong]] (30 000 zitplatsen). Mo Club wilt e nieuw stadiong bouwen van 40 000 platsen, dichte by de kruusienge van den E40 en den E403.
+Brugge èt twi voetbolploegen in êeste klasse: [[Club Brugge]] (kluup) en [[Cercle Brugge]] (sirkul). Ze spêeln olletwêe in 't [[Jan Breydelstadium|Jan Breydelstadiong]] (30.000 zitplatsen). Mo Club wilt e nieuw stadiong bouwen van 40.000 platsen, dichte by de kruusienge van den E40 en den E403.
 <br clear="left" />
 
 ==Polletiek==
