--- a/Jan_Breydelstadiong.mw
+++ b/Jan_Breydelstadiong.mw
@@ -2,7 +2,7 @@
 [[Image:Janbreydelstadion.jpg|right|thumb|250px|Jan Breydelstadium]]
 't '''Jan Breydelstadium''' is 't [[voetbolstadium]] woar dan [[Cercle Brugge]] en [[Club Brugge]] spêeln, mo nateurlik iedere weke overans. 't Is gebouwd gewist in 1974 en gelêegn te [[Sint-Andries]] Brugge.
 
-'t Stadium is iegendomme van 't stad [[Brugge]]. Vroeger wierd het [[Olympiastadium]] of kortweg ''Olympia'' geëetn. 't Is ter gekomn omdat 't vroeger stadium van Club ([[De Klokke]]) te klêne wierd, mo nog méér omdat Club in slichte financiële papieren zat. In 't begun woarn der praktisch 30 000 platsen, mor os de stoande platsen ôok in zitplatsen veranderd zyn, bleevn der mo een goeie 18 000 mir over (da moste van den [[UEFA]]). Olympia is loater nog uutgebreid met de verbouwingn vor [[Euro 2000]] en eet ton ôok z'n nieuwe name gekreegn ([[Jan Breydel]]), die verwyst nor één van d'eldn van de [[Brugse Mettn]] in [[1302]]. Der kan nu were oengeveer 30 000 man in 't Jan Breydelstadium.
+'t Stadium is iegendomme van 't stad [[Brugge]]. Vroeger wierd het [[Olympiastadium]] of kortweg ''Olympia'' geëetn. 't Is ter gekomn omdat 't vroeger stadium van Club ([[De Klokke]]) te klêne wierd, mo nog méér omdat Club in slichte financiële papieren zat. In 't begun woarn der praktisch 30.000 platsen, mor os de stoande platsen ôok in zitplatsen veranderd zyn, bleevn der mo een goeie 18.000 mir over (da moste van den [[UEFA]]). Olympia is loater nog uutgebreid met de verbouwingn vor [[Euro 2000]] en eet ton ôok z'n nieuwe name gekreegn ([[Jan Breydel]]), die verwyst nor één van d'eldn van de [[Brugse Mettn]] in [[1302]]. Der kan nu were oengeveer 30.000 man in 't Jan Breydelstadium.
 
 't Problêem van den dag van vandoage is dat 't te klêne an 't komn is voe de Club en vele kêren te grôot is voe Cercle. De Club wilt e nieuw grodder stadium bouwn e bitje mêer buutn de stad (an de kruusienge van d' [[E40]] en d' [[E403]]) en do zyn ze by Cercle vaneigens nie content mêe. Zyder zoen ton hil da grôot stadion allêne moen euren en betoaln oftewel e nieuw klinder bouwn, ollemoale untwa wo dan ze gin geld vôren en. Voe de Club is 't ton were van grôot belang dan ze e nieuw stadium kunn bouwn voe verder te kunn groein os topploege.
 
