--- a/Duunkerke_III.mw
+++ b/Duunkerke_III.mw
@@ -37,7 +37,7 @@ Ook de eilandn Koezand (in de moundienge van de Westerschelde) en Bosch (een van
 Up [[Kestdag|kestnacht]] van 1717 brak d'r nen stravvn noordwesterstorm los die de kuststroke van Olland, Duutsland en Scandinoavië trof. Volgens schattiengn zyn d'r in da gebied round de 14.000 mienschn doodgegoane. 't Wos den grotstn vloed sinsn vier eeuwn en de latste grote overstromienge in 't noordn van Olland.
 
 ====Woatersnoodrampe van 1953====
-Up den nacht van zaterdag 31 januari 1953 up zundag wos d'r nen styvn stravvn noordwesterstorm die toun nog t'ope viel mè springty. Up vele tientalln plekkn in Zeeland, Zuud-Olland en Vloandern deurbrak de zee de dykn. Binn en poar eurn stound er 150.000 ectoarn polderland ounder woater. By die rampe zyn d'r 1.835 mienschn verdrounkn. D'Ollandsche regerienge èt de Deltawerkn, die ol begunn woarn in 1950, erziene wuk da in 1959 resulteerde in den Deltawet. D'uutvoerienge van die werkn èt zo'n 40 joar gedeurd.
+Up den nacht van zaterdag 31 januari 1953 up zundag wos d'r nen styvn stravvn noordwesterstorm die toun nog t'ope viel mè springty. Up vele tientalln plekkn in Zeeland, Zuud-Olland en Vloandern deurbrak de zee de dykn. Binn en poar eurn stound er 150.000 ectoarn polderland ounder woater. By die rampe zyn d'r 1.835 mienschn verdrounkn. D'Ollandsche regerienge èt de Deltawerkn, die ol begunn woarn in 1950, erziene wuk da in 1959 resulteerde in den Deltawet. D'uutvoerienge van die werkn èt à peu près 40 joar gedeurd.
 
 ==Externe koppeliengen==
 * [http://www.deltawerken.com/Rampen/12.html Deltawerken online]
