*Empty MediaWiki Message*

--- a/Sofia_Rotaru.mw
+++ b/Sofia_Rotaru.mw
@@ -1,14 +1,13 @@
-{{wiu}}
-'''Sofia Rotaru''' (7 ogustus 1947 - Marshintsy, Novoselitskiy Rayon, Chernivtsi Oblast, Ukraine) is een Russoanse, Ukrainoanse, Moldvioanse en Sowjetionase zangeresse, actrice en productrice. De press noemn eur soms wel eki de Queen of Pop<ref>{{cite web|url=http://rus.postimees.ee/100807/glavnaja/estonija/20654.php|title=Pop Queen Sofia Rotaru celebrated her 60th Anniversary as a queen should| work=Postimees| accessdate=2007-08-10}}</ref><ref>{{cite web|url=http://www.kp.ru/daily/24018.3/88065|title="RETRO FM Legends" | work=Komsomolskaya Pravda, 13 decembrie 2007| accessdate=2008-03-03}}</ref>.
-
-==Bronn==
-<references />
+{{beg}}
+[[Ofbeeldienge:Ytpplconcertsrotaru100.jpg|thumb| <center>Sofia Rotaru]]
+'''Sofia Rotaru''' (Marshintsy, regio Novoselitskiy, Tsjernivtsi oblast, USSR (nu Oukraïne), [[7 ogustus|7 augustus]] [[1947]]) is een Russische, Oukraïnsche, Moldoavische popzangeresse, liedjesschryfster, film-en muziekproducente, actrice, danseresse en commercante. In de pers wordt ze soms de ''Queen of Pop'' genoemd. 
 
 == Externe koppelienge==
-*[http://www.sofiarotaru.com Neur website]
+*[http://www.imdb.com/name/nm0744719/ IMDB: Sofia Rotaru]
 
-[[Category:Pop]]
-[[Category:Russische zanger]]
+
+[[Category:Pop|Rotaru, Sofia]]
+[[Category:Russische zanger|Rotaru, Sofia]]
 
 [[am:ሶፊያ ሮታሩ]]
 [[ar:صوفيا روتارو]]
@@ -44,7 +43,7 @@
 [[kk:София Ротару]]
 [[ko:소피아 로타루]]
 [[ky:София Ротару]]
-[[la:Sophia Rotaru]]
+[[la:Sofia Rotaru]]
 [[lb:Sofia Rotaru]]
 [[lt:Sofia Rotaru]]
 [[lv:Sofija Rotaru]]
@@ -68,4 +67,4 @@
 [[uk:Ротару Софія Михайлівна]]
 [[uz:Sofia Rotaru]]
 [[vi:Sofia Rotaru]]
-[[zh:索菲亚·罗塔璐]]
+[[zh:索菲亚•罗塔璐]]
