*Empty MediaWiki Message*

--- a/Getuugnheuvel.mw
+++ b/Getuugnheuvel.mw
@@ -1,4 +1,4 @@
-E '''getuugneuvel''' is een euvel die toogt oe da 't landschap d'r in vroeger tydn uutzag. Specifiek in [[Belgie]] duudt et op e plateau die versnipperd is deur de erôsie van de [[Schelde]] e neur zyreviern. 
+E '''getuugneuvel''' is een euvel die toogt oe da 't landschap d'r in vroeger tydn uutzag. Specifiek in [[Belgie]] duudt et op e plateau die versnipperd is deur de erôsie van de [[Schelde]] e neur zyriviern. 
 
 == Ontstoan ==
 Getuugneuvels zyn ontstoan in 't [[Loat-Mioceen]]. In deze periode kwam de zêe styf op en lei hêel Voandern ounder woater. 't Zand die ton is ofezet noemn ze ''zandn van Diest''. In dat zand zit er vele glauconiet, en in glauconiet zit er toamelik veel yzer. 
