--- a/Anselmus_Adornes.mw
+++ b/Anselmus_Adornes.mw
@@ -18,5 +18,7 @@ Ip 7 december [[1482]] makte Adornes een nieuw testament omdat ’n vrêesde vo 
 Ip 3 moarte 1483 wast er een uutvoartdienst vo Anselmus Adornes in de Jerusalemkerke in Brugge. Z’n [[erte]] wierd in een kiste uut Schotland overgebrocht en bygezet in ’t graf by z’n vrouwe Margareta van der Banck (gestorvn round 1463). Da grafmonument stoat centroal in de kerke. Adornes stoat ook ofgebeeld tegoare me z’n vrouwe ip een veister in gebrandschilderd glas.
 
 [[Categorie: Brugge]]
+[[Categorie: Middelêeuwen]]
+[[Categorie: Schotland]]
 
 [[nl:Anselmus Adornes]]
