*Empty MediaWiki Message*

--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -13,7 +13,7 @@ Vele vlêesgerechtn uut het [[Middn-Ôostn]] en [[Turkeye]] kommn beter uut me '
 
 De AN-uutdrukkienge ''een hart van peperkoek'' es nie gebruukt in [[West-Vloandern]]; ier zeggn me: ''j'ei 'n erte van koeke[[brôod]]'' of ''j'es koekegoed''. Let ip da je nie verwart met ''J'is koekeround'', want da's nie zo vleiend. Koekeround wil zeggen dat de persoon in kwestie in 't heêl nie snugger is. 
 
-Bekende Vlamsche merken van zoetekoeke zyn [[Meli (bedryf)|Meli]] en [[Vondelmolen]].
+Bekende Vlamsche merken van zoetekoeke zyn [[Meli (bedryf)|Meli]] en [[Vondelmolen]]. Intusschen faillit, moa vroeger e grôte noame wos [[De Werkende Bie]].
 
 [[Categorie:Sneukelienge]]
 
