--- a/Zeruzalemkerke.mw
+++ b/Zeruzalemkerke.mw
@@ -1,11 +1,11 @@
 {{plat|Brugs}}
 
 [[Ofbeeldienge:Zeruzalemkerke.JPG|thumb|left|De Zeruzalemkerke]]
-Eèn van de merkweirdigste kerken van [[Brugge]] is de '''Zeruzalemkerke'''.  Z’eet ur definitief uutzicht gekregen tusschen [[1470]] en [[1480]].  Volgens d’overleverienge is ’t 'n woare copieë van de Illige Grafkerke in Zeruzalem.  De familie Adornes, die ut [[Genua]] kwaamp, eet de kerke gebouwd en ’t was Anselmus Adornes die in 1470 en ’71 vo 14 moanden in Zeruzalem gewist was die de defnitieve plannen utgevoerd eet.
+Eén van de merkweirdigste kerken van [[Brugge]] is de '''Zeruzalemkerke'''.  Z’eet ur definitief uutzicht gekregen tusschen [[1470]] en [[1480]].  Volgens d’overleverienge is ’t 'n woare kopieë van de Illige Grafkerke in Zeruzalem.  De familie Adornes, die uut [[Genua]] kwaamp, eet de kerke gebouwd en ’t was [[Anselmus Adornes]] die in 1470 en ’71 vo 14 moanden in Zeruzalem gewist was die de defnitieve plannen uutgevoerd eet.
 
-De kerke is eigenlik un mausolee geworden vo Anselmus Adornes en z'n vrouwe, Margaretha van der Banck.  Under praalgroaven stoan nog oltyd in ’t midden van de kerke.  Adornes was lid gewist van d’ Orde van de Schotse Eènhoor’n  en persoanlikk'n advizeur van de Schotse keunink James III.  Dorom is ’t mo juste z'n erte die in ze graf in Brugge ligt en de reste van z'n lyf in [[Schotland]].
+De kerke is eigenlik een mausolee geworden vo Anselmus Adornes en z'n vrouwe, Margaretha van der Banck.  Under praalgroaven stoan nog oltyd in ’t midden van de kerke.  Adornes was lid gewist van d’ Orde van de Schotse Eenhoorn en persoanlikkn adviseur van de Schotse keunink James III.  Dorom is ’t mo juste z'n erte die in ze graf in Brugge ligt en de reste van z'n lyf in [[Schotland]].
 
-D’echte Illige Grafkerke in Zeruzalem is in de 16ste èèuwe ofgebrand, woardeure da de Brugse versie d'enigste is die een gedacht gift van oe da ze der moet ût gezien en. In Brugge is de Zeruzalemkerke d'enigste kerke die gespoard gebleven is van de [[bêeld'nstorm]].
+D’echte Illige Grafkerke in Zeruzalem is in de 16ste eeuwe ofgebrand, woardeure da de Brugse versie d'enigste is die een gedacht gift van oe da ze der moet uut gezien en. In Brugge is de Zeruzalemkerke d'enigste kerke die gespoard gebleven is van de [[beeldnstorm]].
 
 
 [[Categorie:Brugge]]
