--- a/Brugge.mw
+++ b/Brugge.mw
@@ -282,6 +282,7 @@ Sedert de kiezinge van oktobere 2006 is 't er e bestier van CD&V/NVA met sp.a/Sp
 * [[Benny Scott]]: Zanger
 * [[Maurits Sabbe]]: Schryver
 * [[Jules Fonteyne]]: Schilder, têekenoare en etsere
+* [[Anselmus Adornes]]
 
 ==Soamnwerkienge==
 [[Ofbeeldienge:Flag of Spain.svg|left|20px]] [[Burgos]]. 
