*Empty MediaWiki Message*

--- a/30_januoari.mw
+++ b/30_januoari.mw
@@ -6,6 +6,9 @@
 ==Geboorn==
 *[[1970]] - [[Yves Vanderhaeghe]], West-Vloamse voetballer.
 
+==Gestorvn==
+*[[1384]] - [[Lodewyk van Male]]
+
 [[Categorie:Datum]]
 
 [[af:30 Januarie]]
