*Empty MediaWiki Message*

--- a/1947.mw
+++ b/1947.mw
@@ -2,6 +2,7 @@
 ;januoari
 * [[10 januoari|10]] - [[Paul Breyne]]
 ;ogustus
+* [[7 ogustus|7]] - [[Sofia Rotaru]]
 * [[24 ogustus|24]] - [[Roger De Vlaeminck]]
 
 [[Categorie: 1940-1949]]
