/* Rivaliteit tusschn Brugge en Gent */

--- a/Lodewyk_van_Male.mw
+++ b/Lodewyk_van_Male.mw
@@ -17,8 +17,8 @@ Achter den dôod van ze voader by de Slag van Crécy in [[1346]], erfdegt ie de 
 ==Rivaliteit tusschn Brugge en Gent==
 In 1379 begostn de Gentsche ipstandn teegn em, ounder leidienge van Filips van Artevelde. 
 Gent rebelleerde teegn under groaf omdat de machtige gildn mêer privileges wildegen
-en minder bemoeiengn. Brugge stound wel an de kant van de groaf en azo begost de rivaliteit tusschn de twi steedn.
-Z'aan vo ‘t Kanoal Gent-Oostende, dat êen van d’oudste schiproutes van ’t land is, 'n nateurlikkn woaterlôop tusschn [[Brugge]] en [[Beernem]] uutgediept. ’t Was over da stik kanoal da ‘t conflict begost was. 
+en minder bemoeiiengn. Brugge stound wel an de kant van de groaf en azo begost de rivaliteit tusschn de twi steedn.
+Z'aan vo ‘t Kanoal Gent-Ostende, dat êen van d’oudste schiproutes van ’t land is, 'n nateurlikkn woaterlôop tusschn [[Brugge]] en [[Beirnem]] uutgediept. ’t Was over da stik kanoal da ‘t conflict begost was. 
 ’t Was mor in 1613 dan z’overeen gekommn zyn vo ’t kanoal Brugge - Gent te groavn. De werkn zyn uutgevoerd deur de [[Republiek der Zeevn Verenigde Provinciën]] en in 1621 was d’openienge.
 
 ==Gentschn ipstand==
