--- a/Lucy_Loes.mw
+++ b/Lucy_Loes.mw
@@ -3,9 +3,9 @@
 [[Ofbeeldienge:LucyLoes03.jpg|thumb|Standbeeld van Lucy Loes an den gernoastrap]]
 '''Lucy Loes''' ([[1928]], [[Ostende (stad)|Ostende]]), eur echte noame is '''Lucienne Vanbesien''', is e [[Vloandern|Vlamsche]] [[zanger]]esse. Ze noemn eur de keuniginne van 't visscherslied, die ze assan ziengt in 't Ostends. Z'is gebrakt e gespoogn in Ostende e ze ziengt a heel eur leven liedjes.
 
-'t Is alle joarn vette feeste azze op de [[Paulusfeesten]] moet optreedn. E poar joar geleden was ter zelfs tévele volk voen eur te zien. Eur bekenste liedje is: ''M'n Zeekapiting''.  Andere meeziengers van Lucy Loes zyn ''By uus an 't zeetje'' en ''<nowiki>'</nowiki>t Is gedoan met de dikke madam''.
+'t Is alle joarn vette feeste a ze op de [[Paulusfeesten]] moet optreedn. E poar joar geleden was ter zelfs tévele volk voun eur te zien. Eur bekenste liedje is: ''M'n Zeekapiting''.  Andere meeziengers van Lucy Loes zyn ''By uus an 't zeetje'' en ''<nowiki>'</nowiki>t Is gedoan met de dikke madam''.
 
-Op 11 ogustus 2005 es 't er e standbeeld van Lucy Loes gezet by den gernoastrap of den vistrap an de Visserskoai te Ostende, gin hêel onlogische keuze want doar is ze geboorn en z'eit olsan 't lief en 't leed van de Ostendsche vissers bezoengn.
+Op 11 ogustus 2005 es 't er e standbeeld van Lucy Loes gezet by den gernoastrap of den vistrap an de Visserskoai te Ostende, gin hêel ounlogische keuze want doar is ze geboorn en z'eit olsan 't lief en 't leed van de Ostendsche vissers bezoungn.
 
 [[Categorie:West-Vlamsche zanger|Loes, Lucy]]
 [[Categorie:Ostende|Loes, Lucy]]
