*Empty MediaWiki Message*

--- a/Visschn.mw
+++ b/Visschn.mw
@@ -1,6 +1,6 @@
-'''Visschn''' zyn beestn die in de [[zêe]] of in 't woater leevn. Z'en gin loungn (de [[Dipnoi|longvisschn]] uutgezounderd), moa wel kiewn voe t'oast'mn.
+'''Visschn''' zyn beestn die in de [[zêe]] of in 't woater leevn. Z'en gin loungn (de [[Dipnoi|longvisschn]] uutgezounderd), moa wel kieuwn voe t'oastmn.
 
-Der zyn verschillende sôortn visschn. A je ze indêelt volgens nunder '''abitat''', toen kom je uut op drie sôortn: 
+Der zyn verschillende sôortn visschn. A je ze indêelt volgens de plekke woa dan ze leevn, toun kom je uut op drie sôortn: 
 * [[zoutwoatervisschn]]: in de zêe
 * [[zoetwoatervisschn]]: in beekn e riviern
 * [[brakwoatervisschn]]: in overgangsgebiedn tusschn de zêe en riviern
@@ -9,11 +9,11 @@ Bioloogn dêeln ze in in twêe superklassn:
 * ''Chondrichthyes'' of [[kroakbêenvisschn]]: lik een [[oai]] of e [[rogge]]
 * ''Osteichthyes'' of [[bêenvisschn]]: 't overgrôte dêel. Dee zyn ounderverdeeld in nog kêer twêe klassn:
 ** ''Sarcopterygii'' of [[kwastvinnign]], bv. de [[coelacanth]]
-** ''Actinopterygii'' of [[stroalvinnign]]: weer 't overgrôte dêel, lik e [[toenge (vis)|toenge]]. De mêeste visschn da wieder kenn zitn in de [[infraklasse (taxonomie)|infraklasse]] [[Teleostei]].
+** ''Actinopterygii'' of [[stroalvinnign]]: weer 't overgrôte dêel, lik e [[toenge (vis)|toenge]]. De mêeste visschn da wyder kenn, zittn in de [[infraklasse (taxonomie)|infraklasse]] [[Teleostei]].
  
 
-Der zyn vele menschn die vis eetn. 't Is toen oek e belangryke bronne van inkomstn. Peis moar an de vismyne in [[Nieuwpôort]] en ol de visschers an nuze [[kust]]. 
+Der zyn vele menschn die vis eetn. 't Is toun oek e belangryke bronne van inkomstn. Peis moar an de vismyne in [[Nieuwpôort]] en ol de visschers an nuze [[kust]]. 
 
-Sommigste menschn eetn oek eiers van e bepoalde sôorte vis, de [[steur]]. Ze noemn dadde [[kaviaar]].
+Sommigste menschn eetn oek eiers van e bepoalde sôorte vis, de [[steur]]. Ze noemn dadde [[kaviaar]]. 't Zyn oek nog wel aar sôortn vis woavan dan d'eiers kunn upeetn zyn.
 
-[[Categorie: Vis| ]]
+[[Categorie: Vis]]
