*Empty MediaWiki Message*

--- a/De_Werkende_Bie.mw
+++ b/De_Werkende_Bie.mw
@@ -1,4 +1,4 @@
-{{plat|Poperiengs}}'''De Werkende Bie''' wos e firma in [[Poperienge]] die in andn wos van de familie Maes-Rommens. Ze miekn [[zoetekoeke|krudekoeke]] (couque de Dinant) en woarn in [[Belgie]] en omstreekn bekend vo nunder product en nunder ‘prentjes’. In nunder glôrietyd woarn ze zelfs ofleverancier.
+{{plat|Poperiengs}}'''De Werkende Bie''' wos e firma in [[Poperienge]] die van 1930 tout 1983 in andn wos van de familie Maes-Rommens. Ze miekn [[zoetekoeke|krudekoeke]] (couque de Dinant) en woarn in [[Belgie]] en omstreekn bekend vo nunder product en nunder ‘prentjes’. In nunder glôrietyd woarn ze zelfs ofleverancier.
 
 == Geschiedenisse & produucsje ==
 De stichter van de firma wos Henri Maes, die opekwikt wos in e bakkersfamilie. In 1878 naam ’n e banketbakkery over in d’Yperstroate in Poperienge. In dien tyd gaven de menschen krudekoeke mi kestdag en oudejoar a nunder peter, meter, en grôotouders. Henri Maes vroeg nem of woarom dat dat ollêne in die periode zou moetn zyn. In ’t begun koste Maes mi zyn beperkte middels moa twintig kilo krudekoeke per dag moakn.
