--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -1,5 +1,10 @@
-[[Ofbeeldienge:Pain depices p1050128.jpg|thumb|<center>Zoetekoeke]]
-'''Zoetekoeke''', '''kruudekoeke''' of '''painepisse''' (van 't Fransche  ''Pain d'épices'') is e sôorte [[gebak]]. Omdat 't gemakt es ip boasis van sirope van brune suker en ruggeblomme is 't dounker va kleur. Der is dikkersn ôok sterk smoakende [[zêem]] in verwerkt.
+{{infobox Streekvarianten|
+|nl-woord=Ontbijtkoek
+|figuur=Pain depices p1050128.jpg
+|toaln=[[Kortriks]]<br />[[Poperiengs]]<br />[[Werviks]]<br />[[Ypers]]
+|utsproakn=?<br /><br /><br /><br />krudekoeke<br />painepisse<br />krunekoeke
+|}}
+'''Zoetekoeke''', '''krudekoeke''' of '''painepisse''' (van 't Fransche  ''Pain d'épices'') is e sôorte [[gebak]]. Omdat 't gemakt es ip boasis van sirope van brune suker en ruggeblomme is 't dounker va kleur. Der is dikkersn ôok sterk smoakende [[zêem]] in verwerkt.
 
 De boasiskruudn die de noame en ôok 't grôotste dêel van de smoake geevn,  zyn: [[kanêle]], [[gembre]], [[kruudnoagel]] (kreudnoagle en knuffienoagle in ZO WVL) en [[notemuskoat]]. Eventueel kant'er nog en klêen bitje [[coriander]]zoad, [[kardemoen]], [[foelie]], [[anys]], [[calissie]]out en al de sortn zochte dounkere [[peper]]s (Jamaica) by.
 
