--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -2,7 +2,7 @@
 |nl-woord=Ontbijtkoek
 |figuur=Pain depices p1050128.jpg
 |toaln=[[Kortriks]]<br />[[Poperiengs]]<br />[[Werviks]]<br />[[Ypers]]
-|utsproakn=?<br /krudekoeke<br />painepisse<br />krunekoeke
+|utsproakn=krudekoeke<br />painepisse<br />krunekoeke
 |}}
 '''Zoetekoeke''' is e sôorte [[gebak]]. Omdat 't gemakt es ip boasis van sirope van brune suker en ruggeblomme is 't dounker va kleur. Der is dikkersn ôok sterk smoakende [[zêem]] in verwerkt.
 
