--- a/De_Werkende_Bie.mw
+++ b/De_Werkende_Bie.mw
@@ -12,3 +12,4 @@ Moar op ‘n 16sn november kwam et kêerpunt. Zeven dan de neegn werkmenschen go
 Ticketmagezien
 
 [[Categorie:Poperienge| ]]
+[[Categorie:Voedingsindustrie]]
