*Empty MediaWiki Message*

--- a/Kalissie.mw
+++ b/Kalissie.mw
@@ -9,7 +9,8 @@
 |clade2= [['nieuwe' Tweezaadlobbigen]]
 |clade4= [[Fabiden]]
 |orde= ''[[Fabales]]''
-|familie= ''[[Fabaceae]]''
+|familie= ''[[Fabaceae]]'' (Peulvruchtn)
+|onderfamilie= ''[[Faboideae]]'' (Vlinderblommigen)
 |geslacht= ''[[Glycyrrhiza]]''
 |taxon= [[soort]]
 |w-naam= ''Glycyrrhiza glabra''
@@ -47,7 +48,7 @@ Image:Liquorice wheels.jpg|Drop (gemakt van kalissieout)
 <references />
 }}
 
-[[Categorie: Papilionoideae]]
+[[Categorie: Vlinderblommige]]
 
 [[ar:عرقسوس]]
 [[bg:Женско биле]]
