*Empty MediaWiki Message*

--- a/Portoal:Weetnschap.mw
+++ b/Portoal:Weetnschap.mw
@@ -43,7 +43,7 @@ __NOTOC__
 ****[[Schubreptieln]]: [[Aketisse]], [[Oazelworme]]
 ***[[Kwalle]], [[Visschn]], [[Zêesterre]], [[Zêevounksje]]
 ** [[Flora]]
-***[[Gas]], [[Bus]], [[Mammoetbôom]], [[Ut]], [[Zandrakette]]
+***[[Gas]], [[Bus]], [[Kalissie]], [[Mammoetbôom]], [[Ut]], [[Zandrakette]]
 
 * [[Bloed]], [[Viezn]]
 * [[Paddnoverzet]], [[Vlamsche Biologie Olympiade]], [[Wintersloap]], [[Prikkel]], [[Receptor]]
