--- a/Pukkelpop.mw
+++ b/Pukkelpop.mw
@@ -5,3 +5,8 @@ In 't begun wos Pukkelpop zwoar alternatif. Moar in de loop der joarn is Pukkelp
 
 == Externe koppelienge ==
 * [http://www.pukkelpop.be Officieeln website]
+
+[[de:Pukkelpop]]
+[[en:Pukkelpop]]
+[[fr:Pukkelpop]]
+[[nl:Pukkelpop]]
