--- a/Frederik_Deburghgraeve.mw
+++ b/Frederik_Deburghgraeve.mw
@@ -22,3 +22,4 @@ J'es wok nog en ende gemêenteroadslid gewist van [[Poelkapelle]], de gemêente 
 [[fr:Frederik Deburghgraeve]]
 [[it:Frederik Deburghgraeve]]
 [[nl:Frederik Deburghgraeve]]
+[[pl:Frederik Deburghgraeve]]
