*Empty MediaWiki Message*

--- a/Kalissie.mw
+++ b/Kalissie.mw
@@ -2,13 +2,13 @@
 |naam= Kalissieout
 |afbeelding= Koeh-207.jpg
 |afbeeldingtekst= Koehler (1887)
-|rijk= [[Planten|''Plantae'']]
-|stam= ''[[Embryophyta]]''
-|klasse= ''[[Spermatopsida]]''
+|rijk= [[Planten|''Plantae'']] (Plantn)
+|stam= ''[[Embryophyta]]'' (Landplantn)
+|klasse= ''[[Spermatopsida]]'' (Zoadplantn)
 |clade1= [[Bedektzadigen]]
 |clade2= [['nieuwe' Tweezaadlobbigen]]
 |clade4= [[Fabiden]]
-|orde= ''[[Fabales]]''
+|orde= ''[[Fabales]]'' (Vlinderblomachtigen)
 |familie= ''[[Fabaceae]]'' (Peulvruchtn)
 |onderfamilie= ''[[Faboideae]]'' (Vlinderblommigen)
 |geslacht= ''[[Glycyrrhiza]]''
