--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -1,8 +1,8 @@
 {{infobox Streekvarianten|
 |nl-woord=Ontbijtkoek
 |figuur=Pain depices p1050128.jpg
-|toaln=[[Kortriks]]<br />[[Poperiengs]]<br />[[Werviks]]<br />[[Ypers]]
-|utsproakn=krudekoeke<br />painepisse<br />krunekoeke
+|toaln=[[Kortriks]]<br/>[[Poperiengs]]<br/>[[Werviks]]<br/>[[Ypers]]
+|utsproakn=krudekoeke<br/>painepisse<br/>paindepiesj<br/>krunekoeke
 |}}
 '''Zoetekoeke''' is e sôorte [[gebak]]. Omdat 't gemakt es ip boasis van sirope van brune suker en ruggeblomme is 't dounker va kleur. Der is dikkersn ôok sterk smoakende [[zêem]] in verwerkt.
 
