--- a/Kestdag.mw
+++ b/Kestdag.mw
@@ -1,7 +1,7 @@
 '''Kestdag''' is ne [[feestdag]] en de dag woarip da de [[Christndom|christnen]] de geboorte van [[Jezus van Nazareth|Jezus Christus]] viern. 't Volt ieder joare ip [[25 december]]. Den oavend dervôorn wordt ''kestoavend'' genoemd.
 
 ==Geschiedenisse==
-Volgns de evangeliën moestn Maria en Jozef, de ouders va Jezus, noa [[Bethlehem]] om udder te loatn registreern by de bezettiengsmacht, 't [[Romeinse Ryk]]. De keunieng [[Herodes]] oat doar toe beslootn, om de innienge va belastiengn meugelik te moakn. 't Verhoal goat dat olle erbergn vul zoatn en da Jozef toun moa ne stol gezocht eit om in te sloapn omdat ie zag dat Maria ieder moment koste koopn. Jezus zoudt toun geboorn zyn in dien stol.
+Volgns de evangeliën moestn Maria en Jozef, de ouders va Jezus, noa [[Bethlehem]] om udder te loatn registreern by de bezettiengsmacht, 't [[Romeins Ryk]]. De keunieng [[Herodes]] oat doar toe beslootn, om de innienge va belastiengn meugelik te moakn. 't Verhoal goat dat olle erbergn vul zoatn en da Jozef toun moa ne stol gezocht eit om in te sloapn omdat ie zag dat Maria ieder moment koste koopn. Jezus zoudt toun geboorn zyn in dien stol.
 
 Het fêest van Kestdag es een typisch vôorbeeld van recuperoatie deur de Katholieke keirke, want vôorn da de christnen da vierdn, wos 't er ol een fêest in die periode. De [[Germoann]] vierdn midwinter round [[21 december]] omdat vanof ton de doagn were langer koomn. In de 4de eeuwe eit [[Constantyn de Grote]] beslist da Kestdag ip de 25sten december moest volln. Tot toun wos de geboorte va Jezus nie echt belangryk in het christndom.
 
