--- a/31_moarte.mw
+++ b/31_moarte.mw
@@ -1,1 +1,9 @@
-please look at this
+{{moarte}}
+
+==Gestorvn==
+*[[1621]] - [[Filips III van Spanje]]
+
+[[Categorie:datum]]
+
+[[en:March 31]]
+[[nl:31 maart]]
