*Empty MediaWiki Message*

--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -1,8 +1,8 @@
 {{infobox Streekvarianten|
 |nl-woord=Ontbijtkoek
 |figuur=Pain depices p1050128.jpg
-|toaln=[[Kortriks]]<br/>[[Poperiengs]]<br/>[[Werviks]]<br/>[[Ypers]]
-|utsproakn=krudekoeke<br/>painepisse<br/>paindepiesj<br/>krunekoeke
+|toaln=[[Kortryks]]<br/>[[Poperiengs]]<br/>[[Werviks]]<br/>[[Ypers]]
+|utsproakn=pennepisse<br/>krudekoeke<br/>paindepiesj<br/>krunekoeke
 |}}
 '''Zoetekoeke''' is e sôorte [[gebak]]. Omdat 't gemakt es ip boasis van sirope van brune suker en ruggeblomme is 't dounker va kleur. Der is dikkersn ôok sterk smoakende [[zêem]] in verwerkt.
 
@@ -10,11 +10,11 @@ De boasiskruudn die de noame en ôok 't grôotste dêel van de smoake geevn,  zy
 
 't Wordt mêestal in schyvjes vôorgesneedn en der kunn [[suker]]korrelkes ip gestrôoid liggn.
 
-Mêestal vindje zoetekoeke in bakskesvorme moar in fêestelikke sezoenen lik [[Kestdag]], [[Nieuwjoare]], [[Valentyn]]g en 't [[Poasn]] vindje z'ôok in de vorme van en [[erte]]; ideoal vô en amoureuze attensie an je "zoetekoeke".
+Mêestal vindje zoetekoeke in bakskesvorme moar in fêestelikke sezoenen lik [[Kestdag]], [[Nieuwjoare]], [[Valentyn]]g en 't [[Poasn]] vindje z'ôok in de vorme van en [[erte]]; ideoal vô en amoureuze attentie an je "zoetekoeke".
 
-Qua smoake (en ingrediënten) trekt painepisse straf noa speculoasiekoekn.
+Qua smoake (en ingrediënten) trekt pennepisse straf noa speculoasiekoekn.
 
-Vele vlêesgerechtn uut het [[Middn-Ôostn]] en [[Turkeye]] kommn beter uut me 'n poar schelln krudekoeke d'rin. Probeer moa ne kêe in 't Vlams gerecht [[keun|kenyn]] met bruun [[bier]], da ol redelik zoete es, 'n poar schellen painepisse by te doen: ge goat peizen da je in [[Libanon]] zit.
+Vele vlêesgerechtn uut het [[Middn-Ôostn]] en [[Turkeye]] kommn beter uut me 'n poar schelln krudekoeke d'rin. Probeer moa ne kêe in 't Vlams gerecht [[keun|kenyn]] met bruun [[bier]], da ol redelik zoete es, 'n poar schellen pennepisse by te doen: ge goat peizen da je in [[Libanon]] zit.
 
 De AN-uutdrukkienge ''een hart van peperkoek'' es nie gebruukt in [[West-Vloandern]]; ier zeggn me: ''j'ei 'n erte van koeke[[brôod]]'' of ''j'es koekegoed''. Let ip da je nie verwart met ''J'is koekeround'', want da's nie zo vleiend. Koekeround wil zeggen dat de persoon in kwestie in 't heêl nie snugger is. 
 
