*Empty MediaWiki Message*

--- a/Lodewyk_van_Male.mw
+++ b/Lodewyk_van_Male.mw
@@ -22,7 +22,7 @@ Z'aan vo ‘t Kanoal Gent-Ostende, dat êen van d’oudste schiproutes van ’t 
 ’t Was mor in 1613 dan z’overeen gekommn zyn vo ’t kanoal Brugge - Gent te groavn. De werkn zyn uutgevoerd deur de [[Republiek der Zeevn Verenigde Provinciën]] en in 1621 was d’openienge.
 
 ==Gentschn ipstand==
-Ot in 1379 de Gentschn ipstand uutbrak, zyn Lodewyks Brugsche anangers versleegn deur Filips van Artevelde in de Slag ip ‘t Beverhoutsveld (3 mei [[1382]]) ip de grenze van [[Beernem]], [[Oostkamp]] en [[Assebroeke]]. 
+Ot in 1379 de Gentschn ipstand uutbrak, zyn Lodewyks Brugsche anangers versleegn deur Filips van Artevelde in de Slag ip ‘t Beverhoutsveld (3 mei [[1382]]) ip de grenze van Beirnem, [[Oostkamp]] en [[Assebroeke]]. 
 Vo Gent te dwingn under over te geevn a Lodewyk de belangrykste weegn noa ‘t stad ofgeslootn. Filips van Artevelde, de leider van de Gentsche rebelln, wilde nog  ounderandeln in [[Doornik]] moa zounder resultoat en ’t enigste dat er ip zaat was van Brugge te bestormn vo were een uutweg noa de zêe te kunn èn.
 
 De Slag zoudt den dag achter d'[[Illig-Bloedprocessie]] begost zyn en de Bruggeliengen zoun onnozel zat gewist zyn. Ze kwoamn rechte van d’erbergn round de ''Meersn'' en z’aan ounder de boane voort gedrounkn vo couroage ip te doen. Achter e kort gevecht kost Artevelde ’t Brugs leger, da nie in stoat was vor under  serieus te verweirn,  versloan en Filips bezette Brugge denzelfstn dag zounder moeite. Lodewyk kost vluchtn noa [[Rysel]].
@@ -33,6 +33,10 @@ E poar moandn loater is  Filips van Artevelde gesneuveld in de [[Slag by Westrô
 ==Dôod en ipvolgienge==
 Lodewijk II van Male is in 1384 gestorvn in de Sint-Bertynsabdye in Saint-Omer.
 Je was de latstn uut ’t geslacht Dampierre en ôok de latstn autonoomn groaf van Vloandern: Z’n dochter en erfgenoame  [[Margaretha van Male]] brocht, deur te trouwn mè Filips den Stoutn, ‘t groafschap Vloandern ounder de feitelikke macht van de [[Bourgondische ertoogn]].
+
+
+In 1376 è Lodewyk van Male den eestn stêen geleid van 't [[Gotiek|Gotisch]] Brugs staduus ip de [[Burg (Brugge)|Burg]]. 
+
 
 [[Categorie:Groaf van Vloandern]]
 [[de:Ludwig II. (Flandern)]]
