--- a/Lodewyk_van_Male.mw
+++ b/Lodewyk_van_Male.mw
@@ -8,7 +8,7 @@
 | voader = Lodewyk II van Nevers
 | moeder = Margaretha van Frankryk (1310-1382)
 }}
-'''Lodewyk II van Vloandern''',  gekend ols  '''Lodewyk van Male''', van ’t uus Dampierre,  (Male (by [[Brugge]]), [[29 november]] [[1330]] – [[Saint-Omer]], [[30 januoari]] [[1384]]), was de zeune  van Lodewyk II van Nevers (Lodewyk I van Vloandern)  en Margaretha van [[Frankryk]] (1310-1382). 
+'''Lodewyk II van Vloandern''',  gekend ols  '''Lodewyk van Male''', van ’t uus Dampierre,  (Male (by [[Brugge]]), [[29 november]] [[1330]] – [[Sint-Omaars]], [[30 januoari]] [[1384]]), was de zeune  van Lodewyk II van Nevers (Lodewyk I van Vloandern)  en Margaretha van [[Frankryk]] (1310-1382). 
 
 ==Zyn leevn==
 Achter den dôod van ze voader by de Slag van Crécy in [[1346]], erfdegt ie de groafschappn [[Groafschap Vloandern|Vloandern]], Nevers en Rethel en achter den dôod van ze moeder in 1382 ôok Bourgondië, Franche-Comté en Artesië.
@@ -31,7 +31,7 @@ Volgens e [[legende]] zoun de Gentenoars dien dag de droake van de Brugsche [[Si
 E poar moandn loater is  Filips van Artevelde gesneuveld in de [[Slag by Westrôzebeke]] (27 nov. 1382). Lodewyk kreeg ulpe van ze schôonzeune [[Filips den Stoutn]].
 
 ==Dôod en ipvolgienge==
-Lodewijk II van Male is in 1384 gestorvn in de Sint-Bertynsabdye in Saint-Omer.
+Lodewijk II van Male is in 1384 gestorvn in de Sint-Bertynsabdye in Sint-Omaars.
 Je was de latstn uut ’t geslacht Dampierre en ôok de latstn autonoomn groaf van Vloandern: Z’n dochter en erfgenoame  [[Margaretha van Male]] brocht, deur te trouwn mè Filips den Stoutn, ‘t groafschap Vloandern ounder de feitelikke macht van de [[Bourgondische ertoogn]].
 
 
