Merci an Dreetje, mo 'k en 't egliek e bitje veraard :)

--- a/Sint-Rykers.mw
+++ b/Sint-Rykers.mw
@@ -1,2 +1,24 @@
-{{wiu}}Mien familie is ook West-vlams, moeder van Kemmel en voader van Bulskamp, moa mien groitvoader wos van Ostal (Hoogstade) 'k Vertel'n misschien wel wat ôl geweten is. Mo, weten de West-vlamsche mensch'n die BOKRIJK bezoeken, da os ze ê pientje drienken of ê stuksche eten in de "DE DOLFIJN" dat da het 'Wethuis' is van Sint Rykers. Het bestaat uit een 'postsche', met een cafeetje en de raadzale. De raazale is gescheiden van 't cafeetje deur ê dubbele deure, die beist de 'openbare' zittieng'n open stoend en bie de 'geheime' toe wos. De oude meubels(tafel en een kast met schuiven)stoenden d'r enige joaren geleen nog. 'k hên oltied horen vertel'n dat de familie van mien overgroitmoeder Rosalia VanDamme getrouwd op 10 april 1866 te Ostal mêt overgroitvodaer Leopoldus Tahon, etwadde met 't wethuus te zien had (Eiegnaar, huurder, uitbater)
-Voilà meer weet'k nie . Dreetje
+{{beg}}{{Infobox Belgische deelgemeente|
+|kaart1=[[Ofbeeldienge:Sint-RijkersLocation.svg|300px]]
+|naam= Sint-Rykers
+|provincie=WVLA
+|gemeente=[[Oavergem]]
+|latitudeGraden=50
+|latitudeMinuten=59
+|latitudeSeconden=40
+|longitudeGraden=2
+|longitudeMinuten=41
+|longitudeSeconden=31
+|opp=3,72
+|inw=113
+|datum=01/01/2005
+|dichtheid=30
+|postcode=8690
+|netn=
+|}}
+Sint-Rykers is sedert 1971 e dêelgemêente van [[Oavergem]]. 't E gin kerke en gin echte platse nemêe. 
+
+Sint-Rykers e wel e bekend gebouw, ol stoat et niemir in de parochie zevve. In 't oopnluchtmuseum Bokryk stoat er sedert 1965 'n erberge ''De Dolfijn'' die in 'n tyde 't gemêentuus van Sint-Rykers wos. 't Zit e postje in, met e cafeetje en roadzoale, woatusschn dat er e dubbel deure zit. Dedie stoeg oopn beistn oopnboare zittiengn en ze wos toe beistn zittiengn woa dan de kallantn nietnt van mustn weetn. D'oude meubels stoegn der êentige joarn eleen nog in. 
+
+[[categorie:Plekke in West-Vloandern]]
+[[categorie:Oalveringem]]
