--- a/Tokio_Hotel.mw
+++ b/Tokio_Hotel.mw
@@ -1,2 +1,4 @@
-Tokio Hotel is e poprockbandsje ut Magdeburg (Dutsland). De bendeke is i twedusteneen opgericht me de name 'Devilish' deur de twelinksbroers Bill e Tom Kaulitz (geboorn ip 1 septembr negentienoendertnegenetachtig), tegore me Gustav Schäfer (8 septembr negentienoendertachtentachtig) e Georg Listing (31 maart negentienoendertzevenetachntig), achter daze elkoar bie nen optreedn oentmoet en. Bill e Tom Kaulitz maktn nor under eign zegen ol muziek vanaf undr negn joar, deur daze undr stiefpette en achter gedoan. Gustav Schâfer e Georg Listing an elkoor al gemeet i de muzieklesse. Noada Bill Kaulitz mee a gedoan an 't program 'Kinder-Star-Search' werd da bandeke i twedustendrie oendekt deur ne Dutsn muziekproducent da Peter Hoffmann heat (das chance en é!).
-Tokio Hotel kreeg ne platncontracte bie de platnmatschappye Sony BMG, e i twedustevuve bie Universal Music Group. Tokio Hotel ku nerges ni mi komn wodat dr gi tiernde bakvishn sto. De bende wordt af en toe ook egi geziejn glik de groepe da opkomt oender de name emo (e joengrnculture.)
+{{beg}}[[Ofbeeldienge:Bill kaulitz.jpg|right|thumb|200px|Tokio Hotel in 2006]]
+'''Tokio Hotel''' is e poprockband (oltemets oek wel ''emo'' genoemd) uut Magdeburg in [[Duutsland]]. Ze zyn opgericht met de noame 'Devilish' in 2001 deur de twiliengbroers Bill e Tom Kaulitz, tegoare me Gustav Schäfer e Georg Listing, achter da ze makoar byn en optreedn lêern kenn enn. De broers Kaulitz moakn voogns nunder eign ol muziek van nundr neegn joar vors, deur da ze nundr stiefvoader enn achter gedoan. Schäfer e Listing kendn makoar al van in de muzieklesse. Achter da Bill Kaulitz mee a gedoan an 't programma ''Kinder-Star-Search'', is nundern groep in 2003 ountdekt deur 'n Duutsn muziekproducent Peter Hoffmann.
+
+Tokio Hotel kreeg ne ploatncountract by de ploatnmoatschappy Sony BMG en in 2005 by Universal Music Group. Tokio Hotel et e masse fans, oundermeer e heeln oop jounge misjes.
