*Empty MediaWiki Message*

--- a/Zoetekoeke.mw
+++ b/Zoetekoeke.mw
@@ -1,5 +1,5 @@
 {{infobox Streekvarianten|
-|nl-woord=Ontbijtkoek
+|nl-woord=Ontbijtkoek, Peperkoek
 |figuur=Pain depices p1050128.jpg
 |toaln=[[Kortryks]]<br/>[[Poperiengs]]<br/>[[Werviks]]<br/>[[Ypers]]
 |utsproakn=pennepisse<br/>krudekoeke<br/>paindepiesj<br/>krunekoeke
