--- a/KAJ.mw
+++ b/KAJ.mw
@@ -33,9 +33,9 @@ Kolom1=
 *Joenkersove
 *Klerkn
 *Knokke (Zwevegem)
+*Koolkerke
 
 |Kolom2=
-*Koolkerke
 *Kortryk
 *Lendlee
 *Lichtervelde
@@ -47,15 +47,16 @@ Kolom1=
 *Oostende
 *Outem
 *Pittem
+*Rumbeke
 
 |Kolom3=
-*Rumbeke
 *Ruuslee
 *Tielt
 *Vassenoare
 *Wevelgem
 *Wiengne
 *Wulpen
+*Yper (in upstart)
 *Yzegem
 *Zarrn
 *Zillebeke
