--- a/Kemmelberg.mw
+++ b/Kemmelberg.mw
@@ -1,7 +1,7 @@
 [[Ofbeeldienge:Kemmelberg23.jpg|thumb|<Center>'n Berg vanol de moeilikste kant]]
 [[Ofbeeldienge:Kemmelbergmonument.jpg|thumb|<Center>Monument voe de Fransche soldoatn van 'n [[Êestn Weireldoorloge|Êestn Weireldôorlog]]]]
 
-De '''Kemmelberg''' is e getugeneuvel in [[West-Vloandern]]. 't Is mi zyn 156 meiters 't ogste punt in [[Vloandern]]. Op 't steegste punt goat et 23% omoge.
+De '''Kemmelberg''' is e [[getuugneuvel]] in [[West-Vloandern]]. 't Is mi zyn 156 meiters 't ogste punt in [[Vloandern]]. Op 't steegste punt goat et 23% omoge.
 
 * De Kemmelberg legt op 't groendgebied van de gemêente [[Euvelland]]. 't Is een styve schône omgevienge voer e toertje te doen, te voete of mi de vèlo. 
 * Op 'n berg ving ej ottemets nog tandn van oajn: 't bewys dat de zêe in vroeger tydn vodder kwam da nu. De bovenste loage van de Kemmel (en van ol d'andere uut de reke: de [[Kasselberg]] in [[Vrankryk]], de [[Rôonberg]], ...) is de vroegere zêebodem (uut het Diestiaan) die veel yzer bevat. Doadeure is de groend doar arter en zyn d'euvels nie weg-erodeerd lik ol de reiste.
