*Empty MediaWiki Message*

--- a/Kluusberg.mw
+++ b/Kluusberg.mw
@@ -1,4 +1,4 @@
-De '''Kluusberg''' (Nederlands: ''Kluisberg'', Frans: ''Mont de l'Enlus'') of kortweg de '''Kluus''' es nen berg in 't [[interfluvium]] van de [[Schelde]] en de [[Dender]] en es geleegn in de [[Vlamsche Ardenn]].  De grenze tussn de [[Vloandern|Vloanders]] en de [[Wallonië|Woaln]] lopt van tweisn over de Kluusberg, die vo 'n eld in de Vlamsche fusiegemêente [[Kluusbergn]] en vo 'n andern eld in de Woalse fusiegemêente [[Mont de l'Enclus (gemêente)|Mont de l'Enclus]] ligt.
+De '''Kluusberg''' (Nederlands: ''Kluisberg'', Frans: ''Mont de l'Enlus'') of kortweg de '''Kluus''' es nen [[getuugneuvel]] in 't [[interfluvium]] van de [[Schelde]] en de [[Dender]] en es geleegn in de [[Vlamsche Ardenn]].  De grenze tussn de [[Vloandern|Vloanders]] en de [[Wallonië|Woaln]] lopt van tweisn over de Kluusberg, die vo 'n eld in de Vlamsche fusiegemêente [[Kluusbergn]] en vo 'n andern eld in de Woalse fusiegemêente [[Mont de l'Enclus (gemêente)|Mont de l'Enclus]] ligt.
 
 =='t Kluusbus en recreoatie==
 De Kluusberg es verre hêel begroeid met beuknbus ('t Kluusbus).  Der is een provincioal domein ''Kluisbos'' met een open zwembad (3 verwarmde openluchtboadn en ne springtoorn) en o de westkant zyn der nogol wa horecazoakn vo de wandeleirs en fietsers.  Centroal in 't bus ligt de taverne "De vierschaer", ip de plekke woadat vroeger de [[vierschaar]] wos gelegen.
