--- a/Getuugnheuvel.mw
+++ b/Getuugnheuvel.mw
@@ -10,6 +10,7 @@ Ton dat de zêe achter 't Mioceen werekêerde na 't nôordn, begostn de zandn t'
 * [[Rôonberg]]
 * [[Scherpnberg]]
 * [[Zwortnberg]]
+* [[Kluusberg]]
 
 === Vrankryk ===
 * [[Kasselberg]]
