--- a/Albrecht_Rodenbach.mw
+++ b/Albrecht_Rodenbach.mw
@@ -22,4 +22,5 @@ J'eet in Roeseloare een standbeeld ip et Pieter Dekoninckpling. Niemand in Roese
 
 [[en:Albrecht Rodenbach]]
 [[es:Albrecht Rodenbach]]
+[[fr:Albrecht Rodenbach]]
 [[nl:Albrecht Rodenbach]]
