--- a/Illig_Bloed.mw
+++ b/Illig_Bloed.mw
@@ -6,7 +6,7 @@ Deurda [[Brugge]] in de middelêeuwn zo’n importente stad was, zyn der doa sty
 Volgens da ze zeggen et [[Diederik van den Elzas]], graaf van Vlaandern, ’t Illig Bloed in 1150 meegebrocht uut ’t Illig land. Je zoed da van ze schonbroere, keunink Boudewijn III van Jeruzalem, gekregen en.
 
 T'er zyn d'er pertang die eerder peinzen da de relikwie van ’t Illig Bloed e cadeau was van [[Boudewijn IX]]. Dat was de Vlamsche graaf die ip de 16ste meie 1204, achter de vierde [[kruustocht]], keizer van Constantinopel gekroand wierd. In Constantinopel aan ze styf vele reliekwies die te maken aan mè Christus en die ol 't hope lagen in 't paleis van de keizere. De maniere woarup da de koker in bergkristol geslepen is, wyst er ip dat ie van Constantinopel komt.
-Diederik van den Elzas zoe wel de Sint-Basiliuskerke laten bouwn en ip [[de Burg]] woar da nu d'[[Illig-Bloedkapelle]] is.
+Diederik van den Elzas zoe wel de Sint-Basiliuskerke laten bouwn en ip de [[Burg (Brugge)|Burg]] woar da nu d'[[Illig-Bloedkapelle]] is.
 
 De relikwieë wordt nog olle vrydage en zundage getoogd in d' Illig-Bloedkapelle. En nateurlik is ’t er olle joare d' [[Illig-Bloedprocessie]].
 
