*Empty MediaWiki Message*

--- a/In_Bruges.mw
+++ b/In_Bruges.mw
@@ -4,7 +4,7 @@ Ongeveer drie kart van de film ein ze gefilmd in Brugge, de reste in [[Londn]].
 De film werd geregisseerd door [[Martin Mc Donagh]], die nen Oscar eit gewonn mè zyne kortfilm ''[[Six Shooter]]''. 't Verhoal eit 'n ôok zelve geschreevn. De opnoames startigen ip moandag [[5 februoari]] [[2007]].
 
 De hoofdrolln van ''In Bruges'' zyn gespeeld deur [[Colin Farrell]], [[Brendan Gleeson]], [[Clémence Poésy]], [[Jérémie Renier]], [[Jordan Prentice]] en [[Ralph Fiennes]].
-Der is oa. gefilmd ip de Burg en ip de Grote Markt.
+Der is oa. gefilmd ip de [[Burg (Brugge)|Burg]] en ip de Grote Markt.
 
 ==Veroal==
 {{spoil}}
