*Empty MediaWiki Message*

--- a/William_Redmond.mw
+++ b/William_Redmond.mw
@@ -1,4 +1,4 @@
-'''William Redmond''' (geboren in [[Wexford]] in [[1861]], gestorvn by [[Wytschoate]] [[7 juni]] [[1917]]) was un stryder vo de oenafankelykied van [[Ierland]] die meevocht in den [['14 - '18|èèste weireldorloage]] teegn de [Duutsland[Duutsche]] en sneuvelde an 't begin van de [[De Twêede slag om Mêesn|mynnslag]] in 1917.
+'''William Redmond''' (geboren in [[Wexford]] in [[1861]], gestorvn by [[Wytschoate]] [[7 juni]] [[1917]]) was un stryder vo de oenafankelykied van [[Ierland]] die meevocht in den [['14 - '18|èèste weireldorloage]] teegn de [[Duutsland|Duutsche]] en sneuvelde an 't begin van de [[De Twêede slag om Mêesn|mynnslag]] in 1917.
 
 ==Leevn==
 Majoor William Hoey Hearney Redmound was sedert 1884 lid van 't Britse Lageruus ols lid van de Nationalist Party. Ols Ierse nationalist was 't ie un vôorstander van d'oenafankelykied van Ierland. Je geloofde da d'Ierse zake zou voruut golpen zyn os de Ieren met de Iengelse zoun meevechtn in den èèste weireldorloage. Ols majoor werd Redmound den anvoerder van et 16ste Ierse Divisieregiment.  
