--- a/Sint-Rykers.mw
+++ b/Sint-Rykers.mw
@@ -16,9 +16,11 @@
 |postcode=8690
 |netn=
 |}}
-Sint-Rykers is sedert 1971 e dêelgemêente van [[Oavergem]]. 't E gin kerke en gin echte platse nemêe en 't weunn oek mor e bitje mêer of ounderd menschn. 
+'''Sint-Rykers''' is sedert 1971 e dêelgemêente van [[Oavergem]]. 't E gin kerke en gin echte platse nemêe en 't weunn oek mor e bitje mêer of ounderd menschn. 
 
 Sint-Rykers e wel e bekend gebouw, ol stoat et niemir in de parochie zevve. In 't oopnluchtmuseum Bokryk stoat er sedert 1965 'n erberge ''De Dolfijn'' die in 'n tyde 't gemêentuus van Sint-Rykers wos. 't Zit e postje in, met e cafeetje en roadzoale, woatusschn dat er e dubbel deure zit. Dedie stoeg oopn beistn oopnboare zittiengn en ze wos toe beistn zittiengn woa dan de kallantn nietnt van mustn weetn. D'oude meubels stoegn der êentige joarn eleen nog in. 
 
 [[categorie:Plekke in West-Vloandern]]
 [[categorie:Oalveringem]]
+
+[[nl: Sint-Rijkers]]
