--- a/Deirlyk.mw
+++ b/Deirlyk.mw
@@ -36,20 +36,22 @@
 {{veranderplat|Deirlyks}}
 '''Deirlyk''' (ZO WVL), Déérlik (N WVL) of Dierlaik (Lokaal, streek van Woaregem - officieel [[Nederlands]]: ''Deerlijk'') es e Belgische gemiente, geleegn in 't zoidn van de provincie [[West-Vloandern|West-Vloandrn]], tusn [[Zwevegem]], [[Êestert]], [[Vichte]], [[Oarelbeke]] en [[Woaregem]]. Deirlik éé e aantal wykn en côtés: 't centrum, den Belgiëk, Sellewie, de Veugelwyk, de Keuningswyk,...
 
-Geschiedenisse:
-* de noame Deirlik komt vant Latyng: Tresleca
+== Geschiedenisse ==
+De noame Deirlik komt van 't Latyng: ''Tresleca''.
 
 Deirlik es bekend vo:
 * ''Meubelen Gaverzicht'': e grôte bekende meublzoake in West- & [[Ôost-Vloandern]];
 * Zyn kerke mé e retabel
-* [[Luuk Gruwez]]: ne [[:categorie:Vlamsche dichter|dichtre]]
+
+== Bekende Deirlyknoarns ==
+* [[Luuk Gruwez]]: ne dichtre
 * [[Hugo Verriest]]: paster, schryver en flamingant
 * [[René De Clercq]]: dichter & schryver, bekend van "[[Eule#Tineke van Eule|Tineke Van Heule]]" moa ôok van  'Het puiteke', 'Bietebauw', 'Ogen die het bruin weerkaatst', 'Moederke alleen', ...
-* [[Pieter Jan Renier]]: nog ne schryver
+* [[Pieter Jan Renier]]: ne schryver
 * [[Leif Hoste]]: ne coureur
 * Dr. [[Yves Benoit]]: stichter van 't KinderKankerFonds
 
-==Externe koppelieng'n==
+==Externe koppeliengn==
 *[http://www.deerlijk.be Den officieeln website van Deirlyk]
 *[http://www.dorpentoren.be Heemkundige kryng Dorp En Toren.be]
 *[http://www.taxiedent.be Jeugdhuis 't AxieDent]
