--- a/Le_Vélo_Vert.mw
+++ b/Le_Vélo_Vert.mw
@@ -1,5 +1,7 @@
 {{beg}}
-'''Le Vélo Vert''' is de groep van [[Yves Bondue]], Ann-Sofie Noppe, Rudi Degryse en Jan De Smet.  Ze briengn een miengelinge van chanson en folk.  In septembr 2007 moet under èèste CD uutkommn en recentelik wordt under nieuwste CD-syngel 'Keppe 't u gezegd' ip de radio gedroaid.
+'''Le Vélo Vert''' is de groep van [[Yves Bondue]], Ann-Sofie Noppe, Rudi Degryse en Jan De Smet.  Ze briengn een miengelinge van chanson en folk.  
+
+In septembr 2007 kwam under èèste CD uut: ''Achtbaan naar de zaligheid'', woavan da de CD-syngel 'Keppe 't u gezegd' ip de radio wierd gedroaid.
 
 == Externe koppelienge ==
 *[http://www.levelovert.be Officiele site van Le Vélo Vert] 
