--- a/Metallica.mw
+++ b/Metallica.mw
@@ -139,6 +139,7 @@ Metallica et twi kirs in West-Vloandern espeeld, twi kirs in [[Poperienge]], up 
 [[ro:Metallica]]
 [[ru:Metallica]]
 [[scn:Metàllica]]
+[[sh:Metallica]]
 [[simple:Metallica]]
 [[sk:Metallica]]
 [[sl:Metallica]]
