--- a/Miloan-San_Remo.mw
+++ b/Miloan-San_Remo.mw
@@ -17,6 +17,27 @@ Ie wierd ol gereedn van [[1907]] en zit ol an 94 edities. Ie weirdt ôok wel de 
 * [[2005]] - [[Alessandro Petacchi]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 * [[2006]] - [[Filippo Pozzato]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 * [[2007]] - Oscar Freire [[Ofbeeldienge:Flag of Spain.svg|20px]]
-
+* [[2007]] - Fabian Cancellara [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
 
 [[Categorie:Italioansche wielerkoers]]
+
+
+[[ca:Milà-Sanremo]]
+[[cs:Milán - San Remo]]
+[[da:Milano-Sanremo]]
+[[de:Mailand–Sanremo]]
+[[en:Milan-Sanremo]]
+[[es:Milán-San Remo]]
+[[fi:Milano–San Remo]]
+[[fr:Milan-San Remo]]
+[[gl:Milán-Sanremo]]
+[[he:מילאנו - סן רמו]]
+[[hr:Milano - San Remo]]
+[[it:Milano-Sanremo]]
+[[ja:ミラノ〜サンレモ]]
+[[lb:Milano - Sanremo]]
+[[no:Milano–Sanremo]]
+[[pl:Mediolan-San Remo]]
+[[pms:Milan-Sanremo]]
+[[sc:Milano-Sanremo]]
+[[sv:Milano-Sanremo]]
