--- a/Dwars_door_Vlaanderen.mw
+++ b/Dwars_door_Vlaanderen.mw
@@ -13,6 +13,7 @@
 * 2005 [[Nico Eeckhout]]
 * 2006 [[Frederik Veuchelen]]
 * 2007 [[Tom Boonen]]
+* 2008 Sylvain Chavanel
 
 == Externe koppelienge ==
 *[http://www.dwarsdoorvlaanderen.be/ Den officiëln website]
