*Empty MediaWiki Message*

--- a/Portoal:Sport.mw
+++ b/Portoal:Sport.mw
@@ -37,7 +37,7 @@ __NOTOC__
 | width="50%" style="border: 1px solid #BCD2EE; background-color:aliceblue; padding:1em;" valign="top" |
 
 <h3>[[Basket]]</h3>
-* '''West-Vloandern''': [[West-Vlamsche basketploegn]], [[Piet De Bel]], [[Tony Parker]], [[Alexander Lichodzijewski]], [[Rik Samaey]], [[Lucien Van Kersschaever]]
+* '''West-Vloandern''': [[West-Vlamsche basketploegn]], [[Piet De Bel]], [[Gerrit Major]], [[Tony Parker]], [[Alexander Lichodzijewski]], [[Rik Samaey]], [[Lucien Van Kersschaever]]
 * '''België''': [[Nationale basketcompetitie 2007-2008]], [[Vlamsche basketcompetitie 2007-2008]], [[Sam Van Rossom]], [[Ann Wauters]], [[Piet De Bel]]
 * '''Buutnland''': [[FIBA]], [[NBA]], [[ULEB Cup]], [[WNBA]], [[Chicago Bulls]], [[Michael Jordan]], [[Brian Lynch]]  
 
