--- a/Basket.mw
+++ b/Basket.mw
@@ -53,6 +53,7 @@ De beste basketploegn speeln in Amerika. Doadeure komt et ook da de baskettoale 
 *[[Michael Jordan]]
 *[[Alexander Lichodzijewski]]
 *[[Brian Lynch]]
+*[[Gerrit Major]]
 *[[Tony Parker]]
 *[[Rik Samaey]]
 *[[Lucien Van Kersschaever]]
