*Empty MediaWiki Message*

--- a/4_ogustus.mw
+++ b/4_ogustus.mw
@@ -9,6 +9,7 @@
 * [[1906]]: prinsesse Marie-Josée Charlotte va België in [[Ostende (stad)|Ostende]].
 * [[1961]]: [[Barack Obama]].
 * [[1975]]: [[David van Ooteghem]], radiopresentator geboorn in [[Knokke-Heist]].
+* [[1980]]: [[Gerrit Major]]
 
 [[Categorie:Datum]]
 
