*Empty MediaWiki Message*

--- a/1980.mw
+++ b/1980.mw
@@ -5,6 +5,8 @@
 * [[28 juni|28]] - [[Birger Maertens]]
 ;juli
 * [[19 juli|19]] - [[Xavier Malisse]]
+;augustus
+* [[4 ogustus|4]] - [[Gerrit Major]]
 ;september
 * [[29 september|29]] - [[Jan-Bart De Muelenaere]]
 ;oktober
