*Empty MediaWiki Message*

--- a/8_juli.mw
+++ b/8_juli.mw
@@ -3,6 +3,7 @@
 ==Geboorn==
 *[[1528]] - [[Emanuel Filibert van Savoye]]
 *[[1887]] - [[John Flanders]]
+*[[1967]] - [[Dries Vanhegen]]
 
 
 [[Categorie:Datum]]
