*Empty MediaWiki Message*

--- a/1967.mw
+++ b/1967.mw
@@ -5,6 +5,9 @@
 ;juni
 *[[28 juni|28]] - [[Hilde Crevits]]
 
+;juli
+*[[8 juli|8]] - [[Dries Vanhegen]]
+
 ;december
 *[[15 december|15]] - [[David Černý]] 
 
