--- a/Vos.mw
+++ b/Vos.mw
@@ -50,3 +50,44 @@ Vossn kunn bykan e meiter lank kommn (zounder nundern steirt, die ouk nog en oov
 
 [[Categorie:Vos]]
 [[Categorie:Wikipedia:Bofartikel]]
+
+[[bat-smg:Lapė]]
+[[bg:Лисица]]
+[[ca:Guineu]]
+[[cs:Liška obecná (šelma)]]
+[[da:Rød ræv]]
+[[de:Rotfuchs]]
+[[el:Αλεπού]]
+[[en:Red Fox]]
+[[es:Vulpes vulpes]]
+[[et:Rebane]]
+[[fi:Kettu]]
+[[fr:Renard roux]]
+[[gl:Raposo]]
+[[he:שועל מצוי]]
+[[hr:Crvena lisica]]
+[[hu:Vörös róka]]
+[[id:Rubah merah]]
+[[io:Foxo]]
+[[is:Rauðrefur]]
+[[it:Vulpes vulpes]]
+[[ja:アカギツネ]]
+[[ko:붉은여우]]
+[[la:Vulpes]]
+[[lt:Rudoji lapė]]
+[[lv:Rudā lapsa]]
+[[nl:Vos (dier)]]
+[[no:Rødrev]]
+[[oc:Vulpes vulpes]]
+[[pl:Lis rudy]]
+[[pt:Raposa-vermelha]]
+[[qu:Puka atuq]]
+[[ru:Лисица]]
+[[sl:Navadna lisica]]
+[[sr:Црвена лисица]]
+[[sv:Rödräv]]
+[[tg:Рӯбоҳ]]
+[[th:จิ้งจอกแดง]]
+[[tr:Kızıl tilki]]
+[[uk:Лисиця звичайна]]
+[[zh:赤狐]]
