--- a/Basket.mw
+++ b/Basket.mw
@@ -49,16 +49,19 @@ De beste basketploegn speeln in Amerika. Doadeure komt et ook da de baskettoale 
 *[[ULEB Cup]]
 
 ==Basketters==
+;West-Vloandern
 *[[Piet De Bel]]
-*[[Michael Jordan]]
 *[[Alexander Lichodzijewski]]
-*[[Brian Lynch]]
 *[[Gerrit Major]]
-*[[Tony Parker]]
 *[[Rik Samaey]]
 *[[Lucien Van Kersschaever]]
+;België
+*[[Brian Lynch]]
 *[[Sam Van Rossom]]
 *[[Ann Wauters]]
+;Buutnland
+*[[Michael Jordan]]
+*[[Tony Parker]]
 
 {{commons|Basketball}}
 
