*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -40,4 +40,10 @@ Links neffest d’Oude Griffie stoat ’t oud gerechtsof. ’t Wierd gebouwd in 
 ==De Prôosdye==
 De Prôosdye, ip den ouk van de Breidelstroate, wierd gebouwd in de 17e eeuwe in de [[Barok]]styl. ’t Was de residentie van de prôostn van de Sint-Donaaskerke en de kanseliers van Vloandern. Zynder zorgdn vô de groafelikke administroasje. Van 1559 (ton wierd Brugge bisschopsstad) was ’t de residentie van d’n bisschop, juste neffest de kathedroale.
 
+
+In 2002 was Brugge Culturele Oofdstad. Z’èn ton ’t gerestaureerd stiksje kôormeur met de maquette van de Sint-Donaaskathedroale weg gedoan en ip die plekke  ist er e paviljoen gekommn van de Japanschn architect Toyo Ito. ’t Ginkt er moar e joar stoan  en ’t stadsbesteur zou ’t weg willn, mo ’t stoat er nog. De minister van ruumtelikke ordeniengn èt ’t paviljoen nu tydelik beschermd. 
+
+D’r stoan nu bordn die erinnern an de môord ip groaf [[Karel den Goein]] in de Sint-Donaaskerke 
+in 1127.
+
 [[Categorie: Brugge]]
