--- a/Basket.mw
+++ b/Basket.mw
@@ -51,6 +51,7 @@ De beste basketploegn speeln in Amerika. Doadeure komt et ook da de baskettoale 
 ==Basketters==
 ;West-Vloandern
 *[[Piet De Bel]]
+*[[Marie De Clerck]]
 *[[Alexander Lichodzijewski]]
 *[[Gerrit Major]]
 *[[Rik Samaey]]
