--- a/Tom_DeLonge.mw
+++ b/Tom_DeLonge.mw
@@ -1,2 +1,2 @@
-'''Tom Delonge''' is den gitarist gewist van Blink 182.
+'''Tom Delonge''' is den gitarist gewist van [[Blink 182]].
 In 2005 istem derutgestapt en istem begonnen me "[[Angels and Airwaves]]"
