*Empty MediaWiki Message*

--- a/Travis_Barker.mw
+++ b/Travis_Barker.mw
@@ -1,2 +1,2 @@
-'''Travis Barker''' is ne vree bekenden drummer.Ij speelde wok in''' Blink 182''' an de drums.
+'''Travis Barker''' is ne vree bekenden drummer.Ij speelde wok in'''[[ Blink 182]]''' an de drums.
 Loater eeftij Mark gevolgd en gejoined in [[+44]]
