*Empty MediaWiki Message*

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -10,8 +10,8 @@ de bandleden'''
 #[[Tom Delonge]] (an de gitarre)
 #[[Mark Hoppus]] (an de basse)
 #[[Travis Barker]] (an de drums)
-
-'''wa en ze allemoale utgebracht'''
+'''
+Under cd's'''
 #Buddha (album in 95)
 # Cheshire Cat (album, 1994)
 # Dude Ranch (album, 1997)
