--- a/Madonna_mè_kanunnik_Joris_van_der_Paele.mw
+++ b/Madonna_mè_kanunnik_Joris_van_der_Paele.mw
@@ -14,5 +14,6 @@ Volgns 'n Latynse inscriptie vanounder an de lyste wierd ’t werk voltooid in 1
 
 [[Categorie:Jan van Eyck]]
 
+[[es:Virgen del canónigo Van der Paele]]
 [[nl:Madonna met kanunnik Joris van der Paele]]
 [[pl:Madonna kanonika van der Paele]]
